--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,30 @@
         android:theme="@style/Theme.WhatsAppClone"
         tools:targetApi="31">
         <activity
+            android:name=".NewGroupActivity5"
+            android:exported="false"
+            android:label="Settings"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".NewGroupActivity4"
+            android:exported="false"
+            android:label="Starred Messages"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".NewGroupActivity3"
+            android:exported="false"
+            android:label="Linked Devices"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".NewGroupActivity2"
-            android:exported="false" />
+            android:exported="false"
+            android:label="New Broadcast"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".NewGroupActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="New Group"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
