--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,22 @@
         android:theme="@style/Theme.WhatsAppClone"
         tools:targetApi="31">
         <activity
-            android:name=".NewGroupActivity5"
+            android:name=".SettingsActivity"
             android:exported="false"
             android:label="Settings"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".NewGroupActivity4"
+            android:name=".StarredMessagesActivity"
             android:exported="false"
             android:label="Starred Messages"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".NewGroupActivity3"
+            android:name=".LinkedDevicesActivity"
             android:exported="false"
             android:label="Linked Devices"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".NewGroupActivity2"
+            android:name=".NewBroadcastActivity"
             android:exported="false"
             android:label="New Broadcast"
             android:parentActivityName=".MainActivity" />
